lavf: fix bug that caused has_decode_delay_been_guessed() to never return !=0

Possibly fixes Ticket1724

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>